# Moderncpp_game

./: .gitignore  README.md  makefile  ssh__setup.sh  ssh_setup.sh
Game/: Game.sln
Game/modern_cpp_game/: background.cpp  ball.cpp  constants.h  entity.cpp  entity.h  main.cc  modern_cpp_game.vcxproj  modern_cpp_game.vcxproj.filters  paddle.cpp  paddle.h
Game/modern_game_unit_test/: modern_game_unit_test.vcxproj  test.cpp
SFML_Game/: CMakeLists.txt
SFML_Game/src/: background.cpp  background.h  ball.cpp  ball.h  brick.cpp  brick.h  constants.h  entity.cpp  game.cpp  game.h  interactions.cpp  interactions.h  main.cpp  paddle.cpp  paddle.h
src/: background.h  ball.cpp  ball.h  brick.cpp  brick.h  constants.h  entity.h  game.cpp  game.h  interactions.cpp  interactions.h  main.cpp  movingEntity.cpp  movingEntity.h  paddle.cpp  paddle.h
